--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,35 +1,52 @@
+# HypothesisAI Environment Configuration
+# Copy this file to .env and fill in your API keys
+
 # Application
 APP_NAME=HypothesisAI
 APP_VERSION=1.0.0
 DEBUG=false
 ENVIRONMENT=development
 
-# API
+# LLM Provider API Keys (at least one required)
+OPENAI_API_KEY=your-openai-key
+ANTHROPIC_API_KEY=your-anthropic-key
+GEMINI_API_KEY=your-gemini-key
+
+# Default LLM Configuration
+DEFAULT_LLM_PROVIDER=google
+DEFAULT_LLM_MODEL=gemini-2.0-flash-lite
+
+# Database (optional - defaults to SQLite for CLI usage)
+DATABASE_URL=sqlite:///./hypothesisai.db
+REDIS_URL=redis://localhost:6379/0
+
+# Research Configuration
+MAX_PAPERS_DEFAULT=20
+MAX_HYPOTHESES_DEFAULT=5
+MAX_VALIDATION_HYPOTHESES=3
+
+# Rate Limiting
+API_RATE_LIMIT_DELAY=2.5
+SEARCH_DELAY=1.0
+
+# API (for web interface - optional)
 API_V1_STR=/api/v1
 SECRET_KEY=your-secret-key-here
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 
-# Database
-DATABASE_URL=postgresql://user:password@localhost/hypothesisai
-REDIS_URL=redis://localhost:6379/0
-
-# Vector Database
+# Vector Database (optional)
 QDRANT_HOST=localhost
 QDRANT_PORT=6333
 
-# External APIs
-OPENAI_API_KEY=your-openai-key
-ANTHROPIC_API_KEY=your-anthropic-key
-
-# Email
+# Email (optional)
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=your-email@gmail.com
 SMTP_PASSWORD=your-password
 
-# Celery
+# Celery (optional)
 CELERY_BROKER_URL=redis://localhost:6379/1
 CELERY_RESULT_BACKEND=redis://localhost:6379/2
 
-# Monitoring
+# Monitoring (optional)
 SENTRY_DSN=
